error
PS D:\VS\Deploy_new> & D:/VS/Deploy_new/env/Scripts/python.exe d:/VS/Deploy_new/deploy_etp3.1_UI.py
  File "d:\VS\Deploy_new\deploy_etp3.1_UI.py", line 574
    logger.warning(f"Port {port}
                   ^
SyntaxError: unterminated f-string literal (detected at line 574)
PS D:\VS\Deploy_new> & D:/VS/Deploy_new/env/Scripts/python.exe d:/VS/Deploy_new/deploy_etp3.1_UI.py
  File "d:\VS\Deploy_new\deploy_etp3.1_UI.py", line 574
    logger.warning(f"Port {port}
                   ^
SyntaxError: unterminated f-string literal (detected at line 574)
PS D:\VS\Deploy_new> 
